tests/paczka1/fuzzy1/39988793.err
Error in line 1: lQd7DXn3ya S392 98,46
Error in line 2: rlAX S373 36,3
Error in line 14: lQd7DXn3ya S392 25,6
Error in line 25: rlAX S392 29,9
Error in line 33: rlAX S763 125,6
